# blockchain-lab-01-chain-basics

./: .gitignore  CMakeLists.txt  README.md  package.json  pnpm-lock.yaml
app/: globals.css  layout.tsx
docs/: README.md  learning-path.md
docs/00-overview/: project-brief.md
docs/01-theory/: core-concepts.md  learning-script.md
docs/02-user-experience/: interface-plan.md
docs/03-visual-system/: animation-plan.md
docs/04-tech-stack/: tech-stack.md
docs/05-implementation-plan/: phase-plan.md
docs/06-content-model/: explanation-copy.md
docs/07-validation/: testing-strategy.md
e2e/: main-flow.spec.ts
nextjs-blockchain/: README.md  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
nextjs-blockchain/app/: page.tsx
nextjs-blockchain/src/blockchain/: block.ts  blockchain.ts  hash.ts  index.ts  types.ts
nextjs-blockchain/src/blockchain/__tests__/: blockchain.test.ts
nextjs-blockchain/src/components/: BlockchainVisualizer.tsx
src/: block.cpp  block.h  blockchain.h
src/app/: main.cpp
src/blockchain/: block.ts  types.ts
src/core/: blockchain.cpp
src/crypto/: sha256.h
